--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </section>
         <section>
             <h2>Contact</h2>
-            <p>How people can reach you.</p>
+            <p>Contact information here.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
+        <p>&copy; 2024 Fahad Rafiq</p>
     </footer>
 </body>
 </html>
