--- a/index.html
+++ b/index.html
@@ -3,31 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fahad Rafiq</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Fahad Rafiq - Professional Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .main-content {
+            background: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 5px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <header>
+
+<header>
+    <div class="container">
         <h1>Fahad Rafiq</h1>
-        <p>Welcome to my personal website!</p>
-    </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>This is where you can add information about yourself.</p>
-        </section>
-        <section>
-            <h2>Research</h2>
-            <p>Details about your research projects and publications.</p>
-        </section>
-        <section>
-            <h2>Contact</h2>
-            <p>Contact information here.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Fahad Rafiq</p>
-    </footer>
+        <p>Email: <a href="mailto:info@fahadrafiq.uk" style="color: #fff;">info@fahadrafiq.uk</a></p>
+    </div>
+</header>
+
+<div class="container main-content">
+    <section class="section">
+        <h2>Education</h2>
+        <ul>
+            <li><strong>2021-Present:</strong> Ph.D. Student, University of Florida, FL USA (Fulbright Scholar)</li>
+            <li><strong>2013-2015:</strong> Master of Science (Biology), Lahore University of Management & Sciences (LUMS), Pakistan</li>
+            <li><strong>2008-2013:</strong> Doctor of Veterinary Medicine, University of Veterinary and Animal Sciences (UVAS), Lahore, Pakistan</li>
+            <li><strong>2005-2007:</strong> FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan</li>
+            <li><strong>2003-2005:</strong> Matriculation (Science), Government MC Model High School, Burewala, Vehari, Pakistan</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Professional Experience</h2>
+        <ul>
+            <li><strong>University of Florida:</strong> Teaching Assistant for ANS 3384C and ANS 2005, Gainesville, USA</li>
+            <li><strong>University of Veterinary and Animal Sciences:</strong> Lecturer, Lahore, Pakistan (May 2019-Present)</li>
+            <li><strong>Virtual University of Pakistan:</strong> Lecturer and Instructor (December 2015-May 2019)</li>
+            <li><strong>Part-Time Tutor Biology:</strong> MTS® (2016-Present), Retlm® (2011-2015)</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Research Projects</h2>
+        <ul>
+            <li><strong>2021-Ongoing:</strong> Genetic Mechanisms of Thermotolerance Production Complex in beef cattle</li>
+            <li><strong>2018-2019:</strong> Phylogenetic Analysis of Indigenous Sheep and Goat Breeds of Pakistan</li>
+            <li><strong>2017:</strong> Hepatoprotective Effects of Arabica Coffee Beans in Paracetamol-Induced Hepatotoxic Animal Models</li>
+            <li><strong>2016:</strong> Molecular Characterization of Pathogens Causing Clinical and Subclinical Mastitis in Pakistani Buffaloes</li>
+            <li><strong>2014-2015:</strong> Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic Region of ASH1</li>
+            <li><strong>2013:</strong> Study of Therapeutic Effect of Calcium Chloride Intratesticular Injection for Sterilization of Male Stray Dogs in Lahore</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Posters and Presentations</h2>
+        <ul>
+            <li>Rafiq F. et al. (2024). The relationship between thermotolerance and residual feed intake (RFI) in Brangus heifers. 56th Annual BIF Research Symposium and Convention.</li>
+            <li>Rafiq F. et al. (2023). Can Transcriptome Analysis Help Us Understand Thermotolerance in Beef Cattle? Class Project in GMS6232.</li>
+            <li>Rafiq F. et al. (2023). Phenotypic Relationships Between Thermotolerance and Coat Score in Brangus Heifers. 9th Annual UF IFAS Animal Science Graduate Symposium.</li>
+            <li>Rafiq F. (2023). Decoding the Genetic Mechanisms Responsible for the Thermotolerance-Production Complex. Animal Science Seminar, University of Florida.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Publications</h2>
+        <ul>
+            <li>Hernandez A.S. et al. (2024). Exploring the genetic control of sweat gland characteristics in beef cattle for enhanced heat tolerance. Journal of Animal Science and Biotechnology, 15:66.</li>
+            <li>Lawrence-Dill C.J. et al. (2022). Ten simple rules to ruin a collaborative environment. PLoS Comput Biol, 18(4): e1009957.</li>
+            <li>Thesis: Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic Region of ASH1. LUMS, May 2015.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Academic Distinctions / Scholarships</h2>
+        <ul>
+            <li>2024: Awarded 1-year complimentary membership by the American Meat Science Association (AMSA) as a 2024 ILC Student Fellow.</li>
+            <li>2024: Awarded BIF Student Travel Award for the 56th Annual BIF Research Symposium and Convention.</li>
+            <li>2024: Selected as a Student Fellow for the 2024 International Livestock Congress.</li>
+            <li>2013-2015: Secured LUMS NOP Scholarship for MS Biology.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Co-Curricular Distinctions</h2>
+        <ul>
+            <li>2013: 1st position in UVAS World Egg Day Poster competition.</li>
+            <li>2011-2013: Youth ambassador, UVAS to the Chief Minister Punjab.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Skills and Other Relevant Information</h2>
+        <ul>
+            <li>Proficient in R programming, shell scripting, and genomics databases.</li>
+            <li>Experience with wet lab techniques and computational biology methods.</li>
+            <li>Fluent in English, Urdu, and Punjabi (native).</li>
+            <li>Interests include traveling, reading, and outdoor activities.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Professional Training Courses</h2>
+        <ul>
+            <li>2017: Organized a national conference on aflatoxins.</li>
+            <li>2016: Organized an International Conference on Domestic and Wildlife Animal Genomics and Biotechnology.</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>Memberships/Fellowships</h2>
+        <ul>
+            <li>2024: 1-year complimentary membership by AMSA.</li>
+            <li>Registration with Pakistan Veterinary Medical Council (PVMC), Islamabad.</li>
+        </ul>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
-
