--- a/index.html
+++ b/index.html
@@ -3,20 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found - 404</title>
-    <link rel="stylesheet" href="404.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Fahad Rafiq - Profile</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="error">
-            <h1>404</h1>
-            <p>Page Not Found</p>
-            <a href="/">Return to Home</a>
-        </div>
-        <div class="gator">
-            <img src="gator.png" alt="UF Gator">
-        </div>
+        <header>
+            <h1>Fahad Rafiq</h1>
+            <p>DVM (Bronze), UVAS. MS Biology, LUMS.</p>
+        </header>
+
+        <section class="contact-info">
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:info@fahadrafiq.uk">info@fahadrafiq.uk</a></p>
+        </section>
+
+        <section class="education">
+            <h2>Education</h2>
+            <ul>
+                <li>2021: Working as a Ph.D. Student at the University of Florida, FL USA (Fulbright Scholar)</li>
+                <li>2013-2015: Lahore University of Management & Sciences, Lahore. (Pakistan) 
+                    <ul>
+                        <li>Master of Science (Biology) 3.35/4.00</li>
+                    </ul>
+                </li>
+                <li>2008-2013: University of Veterinary and Animal Sciences, Lahore. (Pakistan)
+                    <ul>
+                        <li>Doctor of Veterinary Medicine: 3.79/4.00</li>
+                    </ul>
+                </li>
+                <li>2005-2007: Government College, Burewala, Vehari. (Pakistan)
+                    <ul>
+                        <li>FSc (Pre-Medical): 908/1100</li>
+                    </ul>
+                </li>
+                <li>2003-2005: Government MC Model High School Burewala, Vehari. (Pakistan)
+                    <ul>
+                        <li>Matriculation (Science): 608/850</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="experience">
+            <h2>Professional Experience</h2>
+            <ul>
+                <li>Teaching Assistant, University of Florida, Gainesville, USA
+                    <ul>
+                        <li>Genetics of Domestic Animals (ANS 3384C), Spring 2023, Spring 2024</li>
+                        <li>Animal Science 2005: Role of Animals in Human History, Fall 2022, Fall 2023</li>
+                    </ul>
+                </li>
+                <li>Lecturer, University of Veterinary and Animal Sciences, Lahore, May 2019 - Date</li>
+                <li>Lecturer, Virtual University of Pakistan, March 2019 - May 2019</li>
+                <li>Instructor/Tutor, Virtual University of Pakistan, December 2015 - March 2019</li>
+                <li>Part-Time Tutor Biology, MTS® (2016 - To date)</li>
+                <li>Part-Time Tutor Biology, Retlm® (2011-2015)</li>
+            </ul>
+        </section>
+
+        <section class="research-projects">
+            <h2>Research Projects</h2>
+            <ul>
+                <li>2021-ongoing: Genetic Mechanisms of Thermotolerance Production Complex in beef cattle</li>
+                <li>2014-2015: Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic region of ASH1</li>
+                <li>2013: Study of Therapeutic Effect of Calcium Chloride Intratesticular Injection for Sterilization of Male Stray Dogs in Lahore</li>
+            </ul>
+        </section>
+
+        <section class="presentations">
+            <h2>Poster and Presentations</h2>
+            <ul>
+                <li>Rafiq F., et al. (2024). The relationship between thermotolerance and residual feed intake (RFI) in Brangus heifers. Poster presented at the 56th Annual BIF Research Symposium and Convention, June 10-13, Knoxville, Tennessee.</li>
+                <li>Rafiq F., et al. (2023). Can Transcriptome Analysis Help Us Understand Thermotolerance in Beef Cattle? Class Project in GMS6232 Advanced Applications of Bioinformatics in Genetics. Fall 2023. Oral Presentation.</li>
+                <li>Rafiq F., et al. (2023). Phenotypic Relationships Between Thermotolerance and Coat Score in Brangus Heifers. Proceedings 9th Annual UF IFAS Animal Science Graduate Symposium, Embassy Suites by Hilton, St. Augustine Beach, FL. Pg 15. Oral Presentation.</li>
+                <li>Rafiq F. (2023). Decoding the Genetic Mechanisms Responsible for the Thermotolerance-Production Complex. Animal Science Seminar, Department of Animal Science, University of Florida. Oral Presentation.</li>
+                <li>Rafiq F., et al. (2022). The Analysis of the Genetic and Phenotypic Relationships Between Thermotolerance, Feed Efficiency, and Reproductive Performance in Brangus Heifers. Proceedings 8th Annual Research Symposium, UF Animal Sciences Graduate Program, St. Augustine, FL, pg. 12 on October 6-7th. Poster Presentation.</li>
+            </ul>
+        </section>
+
+        <section class="publications">
+            <h2>Publications</h2>
+            <ul>
+                <li>Hernandez A.S., et al. (2024). Exploring the genetic control of sweat gland characteristics in beef cattle for enhanced heat tolerance. Journal of Animal Science and Biotechnology, 15:66.</li>
+                <li>Lawrence-Dill C.J., et al. (2022). Ten simple rules to ruin a collaborative environment. PLoS Comput Biol, 18(4): e1009957.</li>
+                <li>Thesis: "Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic region of ASH1. , Rafiq F. , Tariq M. "LUMS, May 2015.</li>
+                <li>Raheem A., et al. (Date). Microbial inhabitants of agricultural land have potential to promote plant growth but they are liable to traditional practice of wheat (T. aestivum L) straw burning. Biocatalysis and Agricultural Biotechnology, 101060</li>
+                <li>FUAAST journal of Biology (HEC recognized. Y cat. journal) “Role of Bioinformatics in Forensic Sciences.”</li>
+            </ul>
+        </section>
+
+        <section class="abstracts">
+            <h2>Abstracts</h2>
+            <ul>
+                <li>Rafiq F., Effects of Aflatoxins on epigenetic mechanisms and their role in carcinogenesis; “National conference on Latest trends in detection and degradation of aflatoxins and its ingredients in the feed” Virtual University of Pakistan, Lahore Pakistan. April, 18, 2017.</li>
+                <li>Hussain, T., et al. Camel Genomics Research in Pakistan: Status and Prospects. 3rd international Scientific Conference of Camel Research and Production. Sudan University of Science and Technology, Khartoum, Sudan. November, 21-23, 2017.</li>
+                <li>Hussain, T., et al. Molecular investigations on Rajanpuri strain of Beetal Goat Breed of Pakistan using mitochondrial DNA Displacement Loop Region Sequences. 12th Malaysia International Genetics Congress, Selangor, Malaysia. September 24-27, 2017.</li>
+                <li>Hussain, T., et al. Global Climate Change Scenario Demanding for the Genomic Identification of Heat Tolerant animals in Pakistan. 1st National Science Conference. The Govt. Sadiq College Women University Bahawalpur. May 4-6, 2017.</li>
+                <li>Hussain, T., et al. Heat Tolerant Animals: Need of Future in Current Global Climate Change Scenario. 3rd International Conference on Agriculture, Food and Animal Sciences. Sindh Agriculture University Tandojam, Pakistan, January 10-11, 2017.</li>
+                <li>Babar, M.E., et al. Enhancing Small Ruminant Productivity by using Recent Genomic Techniques. 5th International Conference on Biotechnology and Bioengineering. Bangkok, Thailand. December 8-10, 2016.</li>
+                <li>Babar, M.E., et al. Existing Status and Opportunities of Genomics Research in Livestock Sector in Pakistan. 2nd International Conference on Agriculture and Biological Sciences. Shanghai, China. July 23-26, 2016.</li>
+            </ul>
+        </section>
+
+        <section class="skills">
+            <h2>Skills and Other Relevant Information</h2>
+            <ul>
+                <li>Proficient in R programming, shell scripting, and working with various platform databases in genomics and bioinformatics.</li>
+                <li>Fly (Drosophila melanogaster) husbandry and genetic analysis through Sex Comb Analysis.</li>
+                <li>Wet lab techniques include molecular biology, cell culture, and imaging, which includes fluorescent microscopy, computational biology methods, and sequence identity analysis methods such as BLAST and FASTA.</li>
+            </ul>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
