--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <header>
             <h1>Fahad Rafiq</h1>
             <p>DVM (Bronze), UVAS. MS Biology, LUMS.</p>
+            <!-- Add your profile picture here -->
+            <img src="image.jpg" alt="Fahad Rafiq" style="width:200px;height:200px;">
         </header>
 
         <section>
