--- a/index.html
+++ b/index.html
@@ -50,9 +50,26 @@
         <section>
             <h2>Publications</h2>
             <ul>
-                <li>Exploring Genetic Control of Sweat Glands in Beef Cattle, Journal of Animal Science and Biotechnology (2024)</li>
-                <li>Ten Simple Rules to Ruin a Collaborative Environment, PLoS Comput Biol (2022)</li>
-            </ul>
+        <li>
+            <strong>Raheem, Asif; Sajid, Moon; Iqbal, Muhammad Sarfaraz; Aslam, Hasnat; Bilal, Muhammad; Rafiq, Fahad.</strong> 
+            <em>Microbial inhabitants of agricultural land have potential to promote plant growth but they are liable to traditional practice of wheat (T. aestivum L) straw burning.</em> 
+            Biocatalysis and Agricultural Biotechnology, 18, 101060, 2019. Elsevier.
+        </li>
+        <li>
+            <strong>Hernandez, Aakilah S; Zayas, Gabriel A; Rodriguez, Eduardo E; Sarlo Davila, Kaitlyn M; Rafiq, Fahad; Nunez, Andrea N; Titto, Cristiane Gonçalves; Mateescu, Raluca G.</strong> 
+            <em>Exploring the genetic control of sweat gland characteristics in beef cattle for enhanced heat tolerance.</em> 
+            Journal of Animal Science and Biotechnology, 15(1), 66, 2024. Springer.
+        </li>
+        <li>
+            <strong>Lawrence-Dill, Carolyn J; Allscheid, Robyn L; Boaitey, Albert; Bauman, Todd; Buckler IV, Edward S; Clarke, Jennifer L; Cullis, Christopher; Dekkers, Jack; Dorius, Cassandra J; Dorius, Shawn F.; Rafiq, Fahad.</strong> 
+            <em>Ten simple rules to ruin a collaborative environment.</em> 
+            PLoS Computational Biology, 18(4), e1009957, 2022. Public Library of Science, San Francisco, CA, USA.
+        </li>
+        <li>
+            <strong>Muntaha, Sidra Tul; Hasnain, Mirza Jawad Ul; Khan, Waqas Ahmad; Rafiq, Fahad; Pervez, Muhammad Tariq.</strong> 
+            <em>Role of bioinformatics in forensic science.</em> 
+            FUUAST Journal of Biology, 8(1), 133-138, 2018.
+        </li>
         </section>
 
         <section>
