--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#skills">Skills</a></li>
+            </ul>
+        </nav>
+        <div class="container">
             <h1>Fahad Rafiq</h1>
             <p>DVM (Bronze), UVAS. MS Biology, LUMS.</p>
-            <!-- Add your profile picture here -->
-            <img src="image.jpg" alt="Fahad Rafiq" style="width:200px;height:200px;">
-        </header>
+            <img src="your-photo.jpg" alt="Fahad Rafiq">
+        </div>
+    </header>
 
-        <section>
+    <main class="container">
+        <section id="contact">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:info@fahadrafiq.uk">info@fahadrafiq.uk</a></p>
+            <p>Connect with me on <a href="https://www.linkedin.com/in/fahadrafiq" target="_blank">LinkedIn</a> | <a href="https://twitter.com/fahadrafiq" target="_blank">Twitter</a></p>
         </section>
 
-        <section>
+        <section id="education">
             <h2>Education</h2>
             <ul>
                 <li>Ph.D. Student, University of Florida, FL, USA (Fulbright Scholar, 2021-present)</li>
@@ -29,7 +41,7 @@
             </ul>
         </section>
 
-        <section>
+        <section id="experience">
             <h2>Experience</h2>
             <ul>
                 <li>Teaching Assistant, University of Florida (2022-present)</li>
@@ -38,7 +50,7 @@
             </ul>
         </section>
 
-        <section>
+        <section id="research">
             <h2>Research</h2>
             <ul>
                 <li>Genetic Mechanisms of Thermotolerance in Beef Cattle (2021-present)</li>
@@ -47,42 +59,25 @@
             </ul>
         </section>
 
-        <section>
+        <section id="publications">
             <h2>Publications</h2>
             <ul>
-        <li>
-            <strong>Raheem, Asif; Sajid, Moon; Iqbal, Muhammad Sarfaraz; Aslam, Hasnat; Bilal, Muhammad; Rafiq, Fahad.</strong> 
-            <em>Microbial inhabitants of agricultural land have potential to promote plant growth but they are liable to traditional practice of wheat (T. aestivum L) straw burning.</em> 
-            Biocatalysis and Agricultural Biotechnology, 18, 101060, 2019. Elsevier.
-        </li>
-        <li>
-            <strong>Hernandez, Aakilah S; Zayas, Gabriel A; Rodriguez, Eduardo E; Sarlo Davila, Kaitlyn M; Rafiq, Fahad; Nunez, Andrea N; Titto, Cristiane Gonçalves; Mateescu, Raluca G.</strong> 
-            <em>Exploring the genetic control of sweat gland characteristics in beef cattle for enhanced heat tolerance.</em> 
-            Journal of Animal Science and Biotechnology, 15(1), 66, 2024. Springer.
-        </li>
-        <li>
-            <strong>Lawrence-Dill, Carolyn J; Allscheid, Robyn L; Boaitey, Albert; Bauman, Todd; Buckler IV, Edward S; Clarke, Jennifer L; Cullis, Christopher; Dekkers, Jack; Dorius, Cassandra J; Dorius, Shawn F.; Rafiq, Fahad.</strong> 
-            <em>Ten simple rules to ruin a collaborative environment.</em> 
-            PLoS Computational Biology, 18(4), e1009957, 2022. Public Library of Science, San Francisco, CA, USA.
-        </li>
-        <li>
-            <strong>Muntaha, Sidra Tul; Hasnain, Mirza Jawad Ul; Khan, Waqas Ahmad; Rafiq, Fahad; Pervez, Muhammad Tariq.</strong> 
-            <em>Role of bioinformatics in forensic science.</em> 
-            FUUAST Journal of Biology, 8(1), 133-138, 2018.
-        </li>
+                <li>Exploring Genetic Control of Sweat Glands in Beef Cattle, Journal of Animal Science and Biotechnology (2024)</li>
+                <li>Ten Simple Rules to Ruin a Collaborative Environment, PLoS Comput Biol (2022)</li>
+            </ul>
         </section>
 
-        <section>
+        <section id="skills">
             <h2>Skills</h2>
             <ul>
                 <li>Proficient in R programming and shell scripting</li>
                 <li>Wet lab techniques: molecular biology, cell culture, and fluorescent microscopy</li>
             </ul>
         </section>
+    </main>
 
-        <footer>
-            <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
-        </footer>
-    </div>
+    <footer>
+        <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
+    </footer>
 </body>
 </html>
