--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:info@fahadrafiq.uk">info@fahadrafiq.uk</a></p>
-            <p>Connect with me on <a href="https://www.linkedin.com/in/fahadrafiq" target="_blank">LinkedIn</a> | <a href="https://x.com/fahad_rafiq4" target="_blank">Twitter</a></p>
+            <p>Connect with me on <a href="https://scholar.google.com/citations?user=OOSWSIAAAAAJ&hl=en" target="_blank">Google Scholar</a> | <a href="https://x.com/fahad_rafiq4" target="_blank">Twitter</a></p>
         </section>
 
         <section id="education">
