--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#research">Research</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>  <li><a href="#education">Education</a></li> <li><a href="#experience">Experience</a></li>    <li><a href="#research">Research</a></li> <li><a href="#publications">Publications</a></li>   <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
         <div class="container">
