--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <h1>Fahad Rafiq</h1>
             <p>DVM (Bronze), UVAS. MS Biology, LUMS.</p>
-            <img src="your-photo.jpg" alt="Fahad Rafiq">
+            <img src="image.jpg" alt="Fahad Rafiq">
         </div>
     </header>
 
