--- a/index.html
+++ b/index.html
@@ -7,58 +7,84 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
+            color: #333;
         }
         header {
-            background-color: #f4f4f4;
+            background-color: #004d99;
+            color: #fff;
             padding: 20px;
             text-align: center;
-            border-bottom: 2px solid #ccc;
+            border-bottom: 3px solid #002d72;
         }
         header img {
             border-radius: 50%;
             width: 150px;
             height: 150px;
             object-fit: cover;
+            border: 3px solid #fff;
         }
         nav ul {
             list-style: none;
             padding: 0;
+            margin: 10px 0;
         }
         nav ul li {
             display: inline;
-            margin: 0 10px;
+            margin: 0 15px;
         }
         nav ul li a {
             text-decoration: none;
-            color: #333;
+            color: #fff;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav ul li a:hover {
+            color: #ffd700;
         }
         .container {
             width: 80%;
             margin: 0 auto;
+            padding: 20px 0;
         }
         main {
             padding: 20px 0;
         }
         section {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         h2 {
-            border-bottom: 2px solid #ccc;
+            border-bottom: 2px solid #004d99;
             padding-bottom: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            color: #004d99;
         }
         footer {
-            background-color: #f4f4f4;
+            background-color: #004d99;
+            color: #fff;
             text-align: center;
-            padding: 10px;
-            border-top: 2px solid #ccc;
+            padding: 15px;
+            border-top: 3px solid #002d72;
         }
         footer p {
             margin: 0;
+        }
+        a {
+            color: #004d99;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #002d72;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -85,7 +111,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:info@fahadrafiq.uk">info@fahadrafiq.uk</a></p>
-            <p>Connect with me on <a href="https://scholar.google.com/citations?user=OOSWSIAAAAAJ&hl=en" target="_blank">Google Scholar</a> | <a href="https://x.com/fahad_rafiq4" target="_blank">Twitter</a>| <a href="https://www.linkedin.com/in/fahad-rafiq-334b42314/" target="_blank">LinkedIn</a></p>
+            <p>Connect with me on <a href="https://scholar.google.com/citations?user=OOSWSIAAAAAJ&hl=en" target="_blank">Google Scholar</a> | <a href="https://x.com/fahad_rafiq4" target="_blank">Twitter</a> | <a href="https://www.linkedin.com/in/fahad-rafiq-334b42314/" target="_blank">LinkedIn</a></p>
         </section>
 
         <section id="education">
