--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <main class="container">
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:info@fahadrafiq.uk">info@fahadrafiq.uk</a></p>
+            <p>Email: <a href="mailto:info@fahadrafiq.uk">fahad Rafiq</a></p>
             <p>Connect with me on <a href="https://scholar.google.com/citations?user=OOSWSIAAAAAJ&hl=en" target="_blank">Google Scholar</a> | <a href="https://x.com/fahad_rafiq4" target="_blank">Twitter</a> | <a href="https://www.linkedin.com/in/fahad-rafiq-334b42314/" target="_blank">LinkedIn</a></p>
         </section>
 
@@ -118,34 +118,49 @@
             <h2>Education</h2>
             <ul>
                 <li>Ph.D. Student, University of Florida, FL, USA (Fulbright Scholar, 2021-present)</li>
-                <li>MS Biology, Lahore University of Management & Sciences, Pakistan (2015)</li>
-                <li>DVM, University of Veterinary and Animal Sciences, Pakistan (2013)</li>
+                <li>MS Biology, Lahore University of Management & Sciences, Pakistan (2015) - 3.35/4.00</li>
+                <li>DVM, University of Veterinary and Animal Sciences, Pakistan (2013) - 3.79/4.00</li>
+                <li>FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan (2007) - 908/1100</li>
+                <li>Matriculation (Science), Government MC Model High School Burewala, Vehari, Pakistan (2005) - 608/850</li>
             </ul>
         </section>
 
         <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li>Teaching Assistant, University of Florida (2022-present)</li>
+                <li>Teaching Assistant, University of Florida (2022-present)
+                    <ul>
+                        <li>Genetics of Domestic Animals (ANS 3384C), Spring 2023, Spring 2024</li>
+                        <li>Role of Animals in Human History (ANS 2005), Fall 2022, Fall 2023</li>
+                    </ul>
+                </li>
                 <li>Lecturer, University of Veterinary and Animal Sciences (2019-present)</li>
                 <li>Instructor, Virtual University of Pakistan (2015-2019)</li>
+                <li>Part-Time Tutor Biology, MTS® (2016-present)</li>
+                <li>Part-Time Tutor Biology, Retlm® (2011-2015)</li>
             </ul>
         </section>
 
         <section id="research">
             <h2>Research</h2>
             <ul>
-                <li>Genetic Mechanisms of Thermotolerance in Beef Cattle (2021-present)</li>
-                <li>Genetic Analysis of BubR1 and ASH1 (2014-2015)</li>
-                <li>Calcium Chloride Injection for Dog Sterilization (2013)</li>
+                <li>Genetic Mechanisms of Thermotolerance Production Complex in Beef Cattle (2021-present)</li>
+                <li>Phylogenetic Analysis of Indigenous Sheep and Goat Breeds of Pakistan (2018-2019)</li>
+                <li>Hepatoprotective Effects of Arabica Coffee Beans in Paracetamol-Induced Hepatotoxic Animal Models (2017)</li>
+                <li>Molecular Characterization of Pathogens Causing Clinical and Subclinical Mastitis in Pakistani Buffaloes (2016)</li>
+                <li>Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic Region of ASH1 (2014-2015)</li>
+                <li>Therapeutic Effect of Calcium Chloride Intratesticular Injection for Sterilization of Male Stray Dogs in Lahore (2013)</li>
             </ul>
         </section>
 
         <section id="publications">
             <h2>Publications</h2>
             <ul>
-                <li>Exploring Genetic Control of Sweat Glands in Beef Cattle, Journal of Animal Science and Biotechnology (2024)</li>
-                <li>Ten Simple Rules to Ruin a Collaborative Environment, PLoS Comput Biol (2022)</li>
+                <li>Hernandez A.S., Zayas G.A., Rodriguez E.E., Sarlo Davila K.M., Rafiq F., Nunez A.N., Titto C.G., Mateescu R.G. (2024). Exploring the Genetic Control of Sweat Gland Characteristics in Beef Cattle for Enhanced Heat Tolerance. Journal of Animal Science and Biotechnology, 15:66.</li>
+                <li>Lawrence-Dill C.J., Allscheid R.L., Boaitey A., Bauman T., Buckler E.S. IV, Clarke J.L., Cullis C., Dekkers J., Dorius C.J., Dorius S.F., Ertl D., Homann M., Hu G., Losch M., Lyons E., Murdoch B., Navabi Z.K., Punnuri S., Rafiq F., Reecy J.M., Schnable P.S., Scott N.M., Sheehan M., Sirault X., Staton M., Tuggle C.K., Van Eenennaam A., Voas R., Markel S. (2022). Ten Simple Rules to Ruin a Collaborative Environment. PLoS Comput Biol, 18(4): e1009957. doi: 10.1371/journal.pcbi.1009957.</li>
+                <li>Thesis: "Genetic Analysis and Molecular Cloning of BubR1 and Purification of the Antigenic Region of ASH1", Rafiq F., Tariq M. "LUMS, May 2015.</li>
+                <li>Raheem A., Sajid M., Iqbal M.S., Aslam H., Bilal M., Rafiq F. (2020). Microbial Inhabitants of Agricultural Land Have Potential to Promote Plant Growth but They Are Liable to Traditional Practice of Wheat (T. aestivum L) Straw Burning. Biocatalysis and Agricultural Biotechnology, 101060.</li>
+                <li>FUAAST Journal of Biology (HEC Recognized, Y Cat. Journal). "Role of Bioinformatics in Forensic Sciences."</li>
             </ul>
         </section>
 
@@ -153,13 +168,14 @@
             <h2>Skills</h2>
             <ul>
                 <li>Proficient in R programming and shell scripting</li>
-                <li>Wet lab techniques: molecular biology, cell culture, and fluorescent microscopy</li>
+                <li>Experienced with Hypergeometric Analysis Tool (hypergATO) and various genomics and bioinformatics platforms</li>
+                <li>Strong background in animal breeding, genetics, and bioinformatics</li>
+                <li>Experienced in teaching and supervising students in genetics and animal science courses</li>
+                <li>Skilled in phylogenetic analysis, molecular cloning, and genetic analysis</li>
+                <li>Effective communicator and presenter, with experience presenting research at international conferences</li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Fahad Rafiq. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+        <p>&copy; 2024 Fahad R
