--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <h2>Education</h2>
             <ul>
                 <li>Ph.D. Student, University of Florida, FL, USA (Fulbright Scholar, 2021-present)</li>
-                <li>MS Biology, Lahore University of Management & Sciences, Pakistan (2015) - 3.35/4.00</li>
-                <li>DVM, University of Veterinary and Animal Sciences, Pakistan (2013) - 3.79/4.00</li>
-                <li>FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan (2007) - 908/1100</li>
-                <li>Matriculation (Science), Government MC Model High School Burewala, Vehari, Pakistan (2005) - 608/850</li>
+                <li>MS Biology, Lahore University of Management & Sciences, Pakistan (2015) </li>
+                <li>DVM, University of Veterinary and Animal Sciences, Pakistan (2013) </li>
+                <li>FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan (2007) - </li>
+                <li>Matriculation (Science), Government MC Model High School Burewala, Vehari, Pakistan (2005) </li>
             </ul>
         </section>
 
@@ -178,4 +178,4 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Fahad R
+        <p>&copy; 2024 Fahad Rafiq
