--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fahad Rafiq - Profile</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -138,7 +138,7 @@
                 </li>
                 <li>Lecturer, University of Veterinary and Animal Sciences (2019-present)</li>
                 <li>Instructor, Virtual University of Pakistan (2015-2019)</li>
-                <li>Part-Time Tutor Biology, MTS® (2016-present)</li>
+                <li>Part-Time Tutor Biology, MTS® (2016-2020)</li>
                 <li>Part-Time Tutor Biology, Retlm® (2011-2015)</li>
             </ul>
         </section>
@@ -169,15 +169,4 @@
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Proficient in R programming and shell scripting</li>
-                <li>Experienced with Hypergeometric Analysis Tool (hypergATO) and various genomics and bioinformatics platforms</li>
-                <li>Strong background in animal breeding, genetics, and bioinformatics</li>
-                <li>Experienced in teaching and supervising students in genetics and animal science courses</li>
-                <li>Skilled in phylogenetic analysis, molecular cloning, and genetic analysis</li>
-                <li>Effective communicator and presenter, with experience presenting research at international conferences</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Fahad Rafiq
+               
