--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li>Ph.D. Student, University of Florida, FL, USA (Fulbright Scholar, 2021-present)</li>
                 <li>MS Biology, Lahore University of Management & Sciences, Pakistan (2015) </li>
                 <li>DVM, University of Veterinary and Animal Sciences, Pakistan (2013) </li>
-                <li>FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan (2007) - </li>
+                <li>FSc (Pre-Medical), Government College, Burewala, Vehari, Pakistan (2007) </li>
                 <li>Matriculation (Science), Government MC Model High School Burewala, Vehari, Pakistan (2005) </li>
             </ul>
         </section>
@@ -138,7 +138,7 @@
                 </li>
                 <li>Lecturer, University of Veterinary and Animal Sciences (2019-present)</li>
                 <li>Instructor, Virtual University of Pakistan (2015-2019)</li>
-                <li>Part-Time Tutor Biology, MTS® (2016-2020)</li>
+                <li>Part-Time Tutor Biology, MTS® (2016-present)</li>
                 <li>Part-Time Tutor Biology, Retlm® (2011-2015)</li>
             </ul>
         </section>
@@ -169,4 +169,17 @@
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-               
+                <li>Proficient in R programming and shell scripting</li>
+                <li>Experienced with Hypergeometric Analysis Tool (hypergATO) and various genomics and bioinformatics platforms</li>
+                <li>Strong background in data analysis, statistical methods, and experimental design</li>
+                <li>Familiar with genomic databases and bioinformatics tools</li>
+                <li>Excellent communication, presentation, and organizational skills</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 Fahad Rafiq. All rights reserved.</p>
+    </footer>
+</body>
+</html>
