--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </li>
                 <li>Lecturer, University of Veterinary and Animal Sciences (2019-present)</li>
                 <li>Instructor, Virtual University of Pakistan (2015-2019)</li>
-                <li>Part-Time Tutor Biology, MTS® (2016-present)</li>
+                <li>Part-Time Tutor Biology, MTS® (2016-2019)</li>
                 <li>Part-Time Tutor Biology, Retlm® (2011-2015)</li>
             </ul>
         </section>
