--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pakistani Livestock Blog</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pakistani Livestock Insights</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Pakistani Livestock Insights</h1>
-    <p>Articles and updates on livestock in Pakistan</p>
+<body class="bg-gray-100 text-gray-800">
+  <header class="bg-white shadow">
+    <div class="max-w-4xl mx-auto px-4 py-6">
+      <h1 class="text-3xl font-bold">Pakistani Livestock Insights</h1>
+      <p class="text-gray-600">Exploring the backbone of Pakistan's agriculture</p>
+    </div>
   </header>
 
-  <main>
-    <section class="article-card">
-      <h2>The State of Livestock in Pakistan</h2>
-      <p class="date">May 27, 2025</p>
-      <p class="summary">
-        An overview of the current condition, challenges, and opportunities in Pakistan's livestock sector.
-      </p>
-      <a href="articles/state-of-livestock.html" target="_blank">Read More</a>
+  <main class="max-w-4xl mx-auto px-4 py-10">
+    <section>
+      <h2 class="text-2xl font-semibold mb-6">Latest Articles</h2>
+      <article class="bg-white p-6 rounded-xl shadow mb-6">
+        <h3 class="text-xl font-bold mb-2"><a href="article1.html" class="text-blue-600 hover:underline">The Role of Cattle in Pakistan's Rural Economy</a></h3>
+        <p class="text-gray-700">An overview of how livestock contributes to livelihoods in rural Pakistan...</p>
+      </article>
+      <!-- Repeat <article> blocks for each new article -->
     </section>
-    <!-- Add more article cards here -->
   </main>
 
-  <footer>
-    &copy; 2025 Pakistani Livestock Blog
+  <footer class="bg-white border-t mt-10">
+    <div class="max-w-4xl mx-auto px-4 py-6 text-sm text-gray-600">
+      &copy; 2025 Pakistani Livestock Insights. All rights reserved.
+    </div>
   </footer>
 </body>
 </html>
